--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
                 height="180"
               />
               <div class="lg-pl-2">
-                <span class="featured-post-title">Title</span>
+                <span class="featured-post-title">Minecraft World</span>
                 <span style="font-size: 18px; color: #8695a4"
-                  >12 Feb 2020 | Figma, Icon Design</span
+                  >06 Mar 2024 | Blender</span
                 >
                 <p class="featured-post-content">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                  doloribus quibusdam explicabo, totam expedita obcaecati rem.
-                  Sed architecto reprehenderit necessitatibus expedita corrupti
-                  quam eius eum ratione,
+                  This is a beginner project that I did in Blender. The project
+                  is a Minecraft world with a few blocks which is then then
+                  shaded and did a simple animation where the world is
+                  destroyed. The project is done using <b>Blender</b>.
                 </p>
               </div>
             </div>
